# installer

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  bootstrap.py  entrypoint.py  justfile  pyproject.toml
.github/workflows/: pull-request.yml  push.yml
src/configs/: config.toml
src/configs/bash/: default.bash  subnet.bash
src/configs/profile/: default.sh  subnet.sh
src/configs/proxmox/: pbs-data.pw  storage.cfg
src/configs/ssh/ssh_config.d/: default.conf
src/configs/ssh/sshd_config.d/: default.conf
src/installer/: constants.py  enums.py  installs.py  main.py  settings.py  setups.py  utilities.py
src/installer/envs/: proxmox.py
src/test_remote_script/: main.py
src/tests/: test_constants.py  test_main.py  test_settings.py  test_utilities.py
